@@ -1,0 +1,51 @@
+= Welcome to the Ubuntu 'Jaunty Jackalope' development release =
+
+*** 
+This is still an alpha release. 
+Do not install it on production machines.  
+***
+
+Thanks for your interest in this development release of Ubuntu.
+The Ubuntu developers are moving very quickly to bring you the
+absolute latest and greatest software the Open Source Community has to
+offer. This development release brings you a taste of the newest features
+for the next version of Ubuntu. 
+
+
+== Reporting Bugs ==
+
+This development release of Ubuntu contains bugs. If you want to help
+out with bugs, the Bug Squad is always looking for help. Please read the
+following information about reporting bugs:
+
+  http://help.ubuntu.com/community/ReportingBugs
+
+Your comments, bug reports, patches and suggestions will help fix bugs and 
+improve future releases. Please report bugs through Launchpad:
+
+  http://launchpad.net/distros/ubuntu/+bugs
+
+
+== Participate in Ubuntu ==
+
+If you would like to help shape Ubuntu, take a look at the list of
+ways you can participate at
+
+  http://www.ubuntu.com/community/participate/
+
+
+== More Information ==
+
+You can find out more about Ubuntu on the Ubuntu website and Ubuntu
+wiki.
+
+  http://www.ubuntu.com/
+  http://wiki.ubuntu.com/
+
+
+To sign up for future Ubuntu development announcements, please
+subscribe to Ubuntu's development announcement list at:
+  
+  http://lists.ubuntu.com/mailman/listinfo/ubuntu-devel-announce 
+
+
