@@ -9,5 +9,6 @@
 #(cd tests && for test in *.py; do python $$test; done)
 
 # update version
-echo "VERSION='$(DEBVER)'" > DistUpgrade/DistUpgradeVersion.py
+DEBVER=$(LC_ALL=C dpkg-parsechangelog |sed -n -e '/^Version:/s/^Version: //p' | sed s/.*://)
+echo "VERSION='$DEBVER'" > DistUpgrade/DistUpgradeVersion.py
 
