@@ -11,8 +11,13 @@ update-manager (1:0.96.4) jaunty; urgency=low
   * DistUpgrade/DistUpgrade.cfg:
     - remove powermanagement-interface on upgrades for ubuntu 
       and kubuntu (no longer needed by them)
+  * DistUpgrade/DevelReleaseAnnouncement:
+    - include a different release announcement for the 
+      development releases
+  * pre-build.sh:
+    - fix version parsing
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 21 Jan 2009 22:12:06 +0100
 
 update-manager (1:0.96.3) jaunty; urgency=low
 
